@@ -5,7 +5,6 @@ import com.pre21.security.filter.JwtAuthenticationFilter;
 import com.pre21.security.filter.JwtVerificationFilter;
 import com.pre21.security.handler.UserAccessDeniedHandler;
 import com.pre21.security.handler.UserAuthenticationEntryPoint;
-import com.pre21.security.handler.UserAuthenticationFailureHandler;
 import com.pre21.security.handler.UserAuthenticationSuccessHandler;
 import com.pre21.security.jwt.JwtTokenizer;
 import com.pre21.security.utils.CustomAuthorityUtils;
@@ -13,7 +12,6 @@ import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.context.annotation.PropertySource;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -28,7 +26,6 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
 
 import static org.springframework.security.config.Customizer.withDefaults;
 
@@ -43,27 +40,27 @@ public class SecurityConfiguration {
     @SneakyThrows
     public SecurityFilterChain filterChain(HttpSecurity http) {
         http
-            .headers().frameOptions().sameOrigin()
-            .and()
-            .httpBasic().disable()
-            .cors().configurationSource(corsConfigurationSource())
-            .and()
-            .csrf().disable()
-            .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-            .and()
-            .formLogin().disable()
-            .exceptionHandling()
-            .authenticationEntryPoint(new UserAuthenticationEntryPoint())
-            .accessDeniedHandler(new UserAccessDeniedHandler())
-            .and()
-            .apply(new CustomFilterConfigurer())
-            .and()
-            .authorizeHttpRequests(authorize -> authorize
-                    .antMatchers(HttpMethod.GET, "/h2/**").permitAll()
+                .headers().frameOptions().sameOrigin()
+                .and()
+                .httpBasic().disable()
+                .cors(withDefaults())
+                .csrf().disable()
+                .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                .and()
+                .formLogin().disable()
+                .exceptionHandling()
+                .authenticationEntryPoint(new UserAuthenticationEntryPoint())
+                .accessDeniedHandler(new UserAccessDeniedHandler())
+                .and()
+                .apply(new CustomFilterConfigurer())
+                .and()
+                .authorizeHttpRequests(authorize -> authorize
+                                .antMatchers(HttpMethod.GET, "/h2/**").permitAll()
+                                .antMatchers(HttpMethod.POST, "**/login").permitAll()
 //                    .antMatchers(HttpMethod.POST, "/**/questions/ask").hasRole("USER")
 //                    .antMatchers(HttpMethod.GET, "/docs/**").hasRole("ADMIN")
-                    .anyRequest().permitAll()
-            );
+                                .anyRequest().permitAll()
+                );
         return http.build();
     }
 
@@ -76,13 +73,8 @@ public class SecurityConfiguration {
     public CorsConfigurationSource corsConfigurationSource() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowCredentials(true);
         configuration.setAllowedOrigins(Arrays.asList("*"));
-        configuration.addAllowedOrigin("*");
-//        configuration.addAllowedOrigin("http://localhost:8080");
-//        configuration.addAllowedOrigin("http://localhost:3000");
-        configuration.addAllowedHeader("*");
-        configuration.setAllowedMethods(List.of("*"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "DELETE", "PATCH"));
         source.registerCorsConfiguration("/**", configuration);
 
         return source;
@@ -97,13 +89,13 @@ public class SecurityConfiguration {
             JwtAuthenticationFilter jwtAuthenticationFilter = new JwtAuthenticationFilter(authenticationManager, jwtTokenizer);
             jwtAuthenticationFilter.setFilterProcessesUrl("/users/login");
             jwtAuthenticationFilter.setAuthenticationSuccessHandler(new UserAuthenticationSuccessHandler(jwtTokenizer));
-            jwtAuthenticationFilter.setAuthenticationFailureHandler(new UserAuthenticationFailureHandler());
+//            jwtAuthenticationFilter.setAuthenticationFailureHandler(new UserAuthenticationFailureHandler());
 
             JwtVerificationFilter jwtVerificationFilter = new JwtVerificationFilter(jwtTokenizer, authorityUtils);
 
             builder
-                .addFilter(jwtAuthenticationFilter)
-                .addFilterAfter(jwtVerificationFilter, JwtAuthenticationFilter.class);
+                    .addFilter(jwtAuthenticationFilter)
+                    .addFilterAfter(jwtVerificationFilter, JwtAuthenticationFilter.class);
         }
     }
 }
